--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,22 @@
 spring.application.name=frogs_product_manager
+
+# PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/frogs_postgres
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# MongoDB
+spring.data.mongodb.uri=mongodb://localhost:27017/frogs_mongo
+
+# Redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+
+# RabbitMQ
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
